<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_margin="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textIdClient"
        android:text="@string/info_cliente"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewID1"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/toma_1" />

     </LinearLayout>

    <LinearLayout
     android:orientation="horizontal"
     android:layout_height="wrap_content"
     android:layout_width="match_parent">

    <Button
        android:id="@+id/buttonON_ID_1"
        android:text="@string/encender"
        android:layout_marginHorizontal="5dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/buttonOFF_ID_1"
        android:text="@string/apagar"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </LinearLayout>


    <TextView
        android:id="@+id/txtDATA1_ID"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:gravity="center"
        android:paddingVertical="2dp"
        android:text="@string/toma_estado" />

    <TextView
        android:id="@+id/textViewID2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/toma_2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonON_ID_2"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/encender2" />

        <Button
            android:id="@+id/buttonOFF_ID_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apagar2" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtDATA2_ID"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center"
        android:paddingVertical="2dp"
        android:text="@string/toma_estado2" />

    <TextView
        android:id="@+id/textViewID3"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/toma_3" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/buttonON_ID_3"
            android:text="@string/encender"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/buttonOFF_ID_3"
            android:text="@string/apagar"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtDATA3_ID"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center"
        android:paddingVertical="2dp"
        android:text="@string/toma_estado3" />

    <TextView
        android:id="@+id/textViewID4"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/toma_4" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonON_ID_4"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/encender4" />

        <Button
            android:id="@+id/buttonOFF_ID_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apagar4" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtDATA4_ID"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:gravity="center"
        android:paddingVertical="2dp"
        android:text="@string/toma_estado4" />




</LinearLayout>
